syntax="proto3";
option java_multiple_files=true;
package com.demo.authservice;

message Token{
  string token=1;
}
message ValidationResponse{
  bool isValid= 1;
}

service AuthService {
  rpc validateToken(Token) returns (ValidationResponse);
}